integration_tests/codegen_fail/fail/input-object/derive_no_underscore.rs
#[derive(juniper::GraphQLInputObject)]
struct Object {
    #[graphql(name = "__test")]
    test: String,
}

fn main() {}
