integration_tests/codegen_fail/fail/input-object/derive_no_underscore.stderr
error: All types and directives defined within a schema must not have a name which begins with `__` (two underscores), as this is used exclusively by GraphQL’s introspection system.
 --> $DIR/derive_no_underscore.rs:3:15
  |
3 |     #[graphql(name = "__test")]
  |               ^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Schema
